use mappter instead of had code mapping func